<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_setting" />
        <item
            android:id="@+id/nav_lockapp"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_drawer_help" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_privacy_policy" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_Share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_Rate_Us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_about" />
        </menu>
    </item>

</menu>
