<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/listofapp_mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listofapplock_All_App"
                android:layout_weight="1"
                android:id="@+id/showallapp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listofapplock_Locked_App"
                android:layout_weight="1"
                android:id="@+id/showlockedallapp"
                />

        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listofapp"
            android:layout_weight="1"
            >

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listofapplock_Set_Password"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:id="@+id/setPassword"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/Setting_mainlayout">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/SettingsContent"
            android:id="@+id/Settings_z">

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/Help_mainlayout"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_menu_camera"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/privacy_policy_mainlayout"
        android:orientation="vertical">

    </LinearLayout>


</FrameLayout>
